--- a/css/style.css
+++ b/css/style.css
@@ -191,7 +191,13 @@ body {
     -webkit-box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.2);
     box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.2);
   }
+
   #botao-disciplinas {
+    position: relative;
+    margin: 30px auto;
+    padding: 20px 20px 20px;
+    width: 310px;
+    
     padding: 0 18px;
     height: 29px;
     font-size: 12px;
@@ -201,7 +207,6 @@ body {
     background: #cde5ef;
     border: 1px solid;
     border-color: #b4ccce #b3c0c8 #9eb9c2;
-    border-radius: 16px;
     outline: 0;
     -webkit-box-sizing: content-box;
     -moz-box-sizing: content-box;
@@ -212,7 +217,6 @@ body {
     background-image: linear-gradient(to bottom, #edf5f8, #cde5ef);
     -webkit-box-shadow: inset 0 1px white, 0 1px 2px rgba(0, 0, 0, 0.15);
     box-shadow: inset 0 1px white, 0 1px 2px rgba(0, 0, 0, 0.15);
-    
 
     font-family: 'Lucida Grande', Tahoma, Verdana, sans-serif;
     font-size: 14px;
@@ -220,10 +224,6 @@ body {
     display: block;
     border-radius: 20px;
     text-align: center;
-    
-
-    
-    
   }
   
   .lt-ie9 input[type=text], .lt-ie9 input[type=password] {
