--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,13 @@ body {
 
 
   #disciplinas {
-    font-size: 150px;
-    
-  }
+        
+      display: table;	
+	  width: 100%; 
+	  background: #fff;
+	  margin: 0;
+	  box-sizing: border-box; 
+ }
 
   
   .login {
