--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
         
     display: block;
 	 	width: auto;
-	 	background: #649bef;
+    background: #0ca3d2;
 	 	height: auto;
 	 	padding-left: 10px;
 	 	color: #fff;
