--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,8 @@ body {
   }
 
 
+  
+
 
   #disciplinas {
         
@@ -21,7 +23,30 @@ body {
 	
  }
 
+
+
+
+  #header-card{
+    position: relative;
+    font-size: 200%;
+    margin-bottom: 50px;
+    font-weight: bold;
+  }
+
+
   
+  #disciplina-card{
+
+    position: relative;
+    margin: 30px auto;
+    padding: 20px 20px 20px;
+    width: 310px;
+    background: white;
+    border-radius: 10px;
+    
+    
+  }
+
   .login {
     position: relative;
     margin: 30px auto;
@@ -210,6 +235,43 @@ body {
     box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.2);
   }
 
+  #meulike {
+    
+    position: relative;
+    margin: 30px auto;
+    padding: 20px 20px 20px;
+    width: 100px;
+    
+    padding: 0 18px;
+    height: 29px;
+    font-size: 12px;
+    font-weight: bold;
+    color: #527881;
+    text-shadow: 0 1px #e3f1f1;
+    background: #cde5ef;
+    border: 1px solid;
+    border-color: #b4ccce #b3c0c8 #9eb9c2;
+    outline: 0;
+    -webkit-box-sizing: content-box;
+    -moz-box-sizing: content-box;
+    box-sizing: content-box;
+    background-image: -webkit-linear-gradient(top, #edf5f8, #cde5ef);
+    background-image: -moz-linear-gradient(top, #edf5f8, #cde5ef);
+    background-image: -o-linear-gradient(top, #edf5f8, #cde5ef);
+    background-image: linear-gradient(to bottom, #edf5f8, #cde5ef);
+    -webkit-box-shadow: inset 0 1px white, 0 1px 2px rgba(0, 0, 0, 0.15);
+    box-shadow: inset 0 1px white, 0 1px 2px rgba(0, 0, 0, 0.15);
+
+    font-family: 'Lucida Grande', Tahoma, Verdana, sans-serif;
+    font-size: 14px;
+    cursor: pointer;
+    display: block;
+    border-radius: 20px;
+    text-align: center;
+
+  }
+  
+
   #botao-disciplinas {
     position: relative;
     margin: 30px auto;
@@ -243,6 +305,8 @@ body {
     border-radius: 20px;
     text-align: center;
   }
+
+  
   
   .lt-ie9 input[type=text], .lt-ie9 input[type=password] {
     line-height: 34px;
