--- a/css/style.css
+++ b/css/style.css
@@ -2,195 +2,49 @@ body {
     font: 13px/20px "Lucida Grande", Tahoma, Verdana, sans-serif;
     color: #404040;
     background: #0ca3d2;
-  }
+}
 
-
-  
-
-
-  #disciplinas {
-        
-    display: block;
-	 	width: auto;
-    background: #0ca3d2;
-	 	height: auto;
-	 	padding-left: 10px;
-	 	color: #fff;
-	 	font-size: 15px;
-	 	line-height: 55px;
-	 	text-shadow: 1px 1px 1px rgba(0,0,0,.3);
-	 	box-sizing: border-box;
-	
- }
-
-
-
-
-  #header-card{
-    position: relative;
-    font-size: 200%;
-    margin-bottom: 50px;
-    font-weight: bold;
-    height: auto;
-  }
-
-  #likecounter{
-    font-size: 200%;
-  }
-
-  
-  #disciplina-card {
-
-    position: relative;
-    margin: 30px auto;
-    padding: 20px 20px 20px;
-    width: 310px;
-    background: white;
-    border-radius: 10px;
-    
-    
-  }
-
-  .login {
-    position: relative;
-    margin: 30px auto;
-    padding: 20px 20px 20px;
-    width: 310px;
-    background: white;
-    border-radius: 3px;
-    -webkit-box-shadow: 0 0 200px rgba(255, 255, 255, 0.5), 0 1px 2px rgba(0, 0, 0, 0.3);
-    box-shadow: 0 0 200px rgba(255, 255, 255, 0.5), 0 1px 2px rgba(0, 0, 0, 0.3);
-  }
-
- 
-
-  .cadastro {
-    text-align: left;
-  }
-
-  .computacao-logo {
+.computacao-logo {
     display: block;
     margin-left: auto;
     margin-right: auto;
     background-color:seashell;
     border-radius: 10px;
-    
-  }
-  
-  
-  .login:before {
-    content: '';
-    position: absolute;
-    top: -8px;
-    right: -8px;
-    bottom: -8px;
-    left: -8px;
-    z-index: -1;
-    background: rgba(0, 0, 0, 0.08);
-    border-radius: 4px;
-  }
-  
-  .login h1 {
+    box-shadow: 0 0 200px rgba(255, 255, 255, 0.5), 0 1px 2px rgba(0, 0, 0, 0.3);
+}
+
+.form-comum {
+    margin: 30px auto;
+    padding: 20px 20px 20px;
+    width: 310px;
+    background:  white;
+    border-radius: 3px;
+    box-shadow: 0 0 200px rgba(255, 255, 255, 0.5), 0 1px 2px rgba(0, 0, 0, 0.3);
+}
+
+.form-comum h1 {
     margin: -20px -20px 21px;
     line-height: 40px;
     font-size: 15px;
-    font-weight: bold;
     color: #555;
     text-align: center;
-    text-shadow: 0 1px white;
     background: #f3f3f3;
     border-bottom: 1px solid #cfcfcf;
     border-radius: 3px 3px 0 0;
-    background-image: -webkit-linear-gradient(top, whiteffd, #eef2f5);
-    background-image: -moz-linear-gradient(top, whiteffd, #eef2f5);
-    background-image: -o-linear-gradient(top, whiteffd, #eef2f5);
-    background-image: linear-gradient(to bottom, whiteffd, #eef2f5);
-    -webkit-box-shadow: 0 1px whitesmoke;
-    box-shadow: 0 1px whitesmoke;
-  }
-  
-  .login p {
-    margin: 20px 0 0;
-  }
-  
-  .login p:first-child {
-    margin-top: 0;
-  }
-  
-  .login input[type=text], .login input[type=password] {
-    width: 278px;
-  }
-  
-  .login p.remember_me {
-    float: left;
-    line-height: 31px;
-  }
-  
-  .login p.remember_me label {
-    font-size: 12px;
-    color: #777;
-    cursor: pointer;
-  }
-  
-  .login p.remember_me input {
-    position: relative;
-    bottom: 1px;
-    margin-right: 4px;
-    vertical-align: middle;
-  }
-  
-  .login p.submit {
-    text-align: right;
-  }
+}
 
-  #cadastrar {
-    margin: 20px 0;
-    font-size: 11px;
-    color: white;
-    text-align: center;
-    text-shadow: 0 1px #2a85a1;
-    font-size: 12px;
-    cursor: pointer;
-  }
-  
-  .login-help {
-    margin: 20px 0;
-    font-size: 11px;
-    color: white;
-    text-align: center;
-    text-shadow: 0 1px #2a85a1;
-    font-size: 12px;
-  }
-  
-  .login-help a {
-    color: #cce7fa;
-    text-decoration: none;
-  }
-  
-  .login-help a:hover {
-    text-decoration: underline;
-  }
-  
-  :-moz-placeholder {
-    color: #c9c9c9 !important;
-    font-size: 13px;
-  }
-  
-  ::-webkit-input-placeholder {
-    color: #ccc;
-    font-size: 13px;
-  }
-  
-  input {
-    font-family: 'Lucida Grande', Tahoma, Verdana, sans-serif;
-    font-size: 14px;
-    cursor: pointer;
-  }
-  
-  input[type=text], input[type=password] {
+.form-comum p {
+    margin: 20px 0 0;
+}
+
+.form-comum p.submit {
+    text-align: right;
+}
+
+.form-comum input[type=password], input[type=text] {
+    width: 90%;
     margin: 5px;
     padding: 0 10px;
-    width: 200px;
     height: 34px;
     color: #404040;
     background: white;
@@ -198,18 +52,16 @@ body {
     border-color: #c4c4c4 #d1d1d1 #d4d4d4;
     border-radius: 2px;
     outline: 5px solid #eff4f7;
-    -moz-outline-radius: 3px;
-    -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.12);
     box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.12);
-  }
-  
-  input[type=text]:focus, input[type=password]:focus {
+}
+
+.form-comum input[type=text]:focus, input[type=password]:focus {
     border-color: #7dc9e2;
     outline-color: #dceefc;
     outline-offset: 0;
-  }
-  
-  input[type=submit] {
+}
+
+.form-comum input[type=submit] {
     padding: 0 18px;
     height: 29px;
     font-size: 12px;
@@ -221,105 +73,43 @@ body {
     border-color: #b4ccce #b3c0c8 #9eb9c2;
     border-radius: 16px;
     outline: 0;
-    -webkit-box-sizing: content-box;
-    -moz-box-sizing: content-box;
     box-sizing: content-box;
-    background-image: -webkit-linear-gradient(top, #edf5f8, #cde5ef);
-    background-image: -moz-linear-gradient(top, #edf5f8, #cde5ef);
-    background-image: -o-linear-gradient(top, #edf5f8, #cde5ef);
-    background-image: linear-gradient(to bottom, #edf5f8, #cde5ef);
-    -webkit-box-shadow: inset 0 1px white, 0 1px 2px rgba(0, 0, 0, 0.15);
     box-shadow: inset 0 1px white, 0 1px 2px rgba(0, 0, 0, 0.15);
     cursor: pointer;
-  }
-  
-  input[type=submit]:active {
+}
+
+.form-comum input[type=submit]:active {
     background: #cde5ef;
     border-color: #9eb9c2 #b3c0c8 #b4ccce;
-    -webkit-box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.2);
     box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.2);
-  }
+}
 
-  #meulike {
-    
-    display: inline-block;
-    position: relative;
-    margin: 30px auto;
-    padding: 20px 20px 20px;
-    width: 100px;
-    margin-bottom: 100px;
-    
-    padding: 0 18px;
-    height: 29px;
-    font-size: 12px;
-    font-weight: bold;
-    color: #527881;
-    text-shadow: 0 1px #e3f1f1;
-    background: #cde5ef;
-    border: 1px solid;
-    border-color: #b4ccce #b3c0c8 #9eb9c2;
-    outline: 0;
-    -webkit-box-sizing: content-box;
-    -moz-box-sizing: content-box;
-    box-sizing: content-box;
-    background-image: -webkit-linear-gradient(top, #edf5f8, #cde5ef);
-    background-image: -moz-linear-gradient(top, #edf5f8, #cde5ef);
-    background-image: -o-linear-gradient(top, #edf5f8, #cde5ef);
-    background-image: linear-gradient(to bottom, #edf5f8, #cde5ef);
-    -webkit-box-shadow: inset 0 1px white, 0 1px 2px rgba(0, 0, 0, 0.15);
-    box-shadow: inset 0 1px white, 0 1px 2px rgba(0, 0, 0, 0.15);
-
-    font-family: 'Lucida Grande', Tahoma, Verdana, sans-serif;
-    font-size: 14px;
-    cursor: pointer;
-    border-radius: 20px;
-    text-align: center;
-
-  }
-
-  #meulike:hover{
-    border-color: blue;
-  }
-  
-
-  #botao-disciplinas {
-    position: relative;
-    margin: 30px auto;
-    padding: 20px 20px 20px;
+.botao-comum {
+    margin: 5px auto;
     width: 310px;
     
-    padding: 0 18px;
-    height: 29px;
-    font-size: 12px;
     font-weight: bold;
-    color: #527881;
-    text-shadow: 0 1px #e3f1f1;
-    background: #cde5ef;
-    border: 1px solid;
-    border-color: #b4ccce #b3c0c8 #9eb9c2;
-    outline: 0;
-    -webkit-box-sizing: content-box;
-    -moz-box-sizing: content-box;
-    box-sizing: content-box;
-    background-image: -webkit-linear-gradient(top, #edf5f8, #cde5ef);
-    background-image: -moz-linear-gradient(top, #edf5f8, #cde5ef);
-    background-image: -o-linear-gradient(top, #edf5f8, #cde5ef);
-    background-image: linear-gradient(to bottom, #edf5f8, #cde5ef);
-    -webkit-box-shadow: inset 0 1px white, 0 1px 2px rgba(0, 0, 0, 0.15);
-    box-shadow: inset 0 1px white, 0 1px 2px rgba(0, 0, 0, 0.15);
-
-    font-family: 'Lucida Grande', Tahoma, Verdana, sans-serif;
     font-size: 14px;
-    cursor: pointer;
     display: block;
     border-radius: 20px;
     text-align: center;
-  }
+    line-height: 30px;
 
-  
-  
-  .lt-ie9 input[type=text], .lt-ie9 input[type=password] {
-    line-height: 34px;
-  }
+    cursor: pointer;
 
-  
+    padding: 0 18px;
+    height: 30px;
+    color: #305057;
+    text-shadow: 0 1px #e3f1f1;
+    text-decoration: underline;
+    border: 1px solid;
+    border-color: #b4ccce #b3c0c8 #9eb9c2;
+    background-image: linear-gradient(to bottom, #edf5f8, #cde5ef);
+    box-shadow: inset 0 1px white, 0 1px 2px rgba(0, 0, 0, 0.15);
+}
+
+.botao-comum:active {
+    background: #cde5ef;
+    border-color: #9eb9c2 #b3c0c8 #b4ccce;
+    box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.2);
+}
