--- a/css/perfil.css
+++ b/css/perfil.css
@@ -21,6 +21,13 @@
     border-radius: 3px;
 }
 
+.cartao-disciplina h3 {
+    margin: 6px;
+    color: #555;
+    text-align: center;
+    font-size: 16px;
+}
+
 .cartao-disciplina p {
     margin: 6px 2px;
     display:inline-block;
