--- a/css/style.css
+++ b/css/style.css
@@ -113,3 +113,10 @@ body {
     border-color: #9eb9c2 #b3c0c8 #b4ccce;
     box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.2);
 }
+
+#footer {
+    color: white;
+    text-align: center;
+    text-shadow: 0 1px #2a85a1;
+    font-size: 14px;
+}
