--- a/css/perfil.css
+++ b/css/perfil.css
@@ -61,3 +61,8 @@
     border-color: #9eb9c2 #b3c0c8 #b4ccce;
     box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.2);
 }
+
+.botao-comment {
+    width: 180px;
+    display: inline-block;
+}
