adiciona header e modifica css

--- a/css/style.css
+++ b/css/style.css
@@ -121,6 +121,10 @@ body {
     font-size: 14px;
 }
 
-.container-comentario {
-    border-bottom: solid 5px black;
+.username-header {
+    color: white;
+    text-align: center;
+    text-shadow: 0 1px #2a85a1;
+    font-size: 14px;
+    margin: 8px;
 }
