--- a/css/perfil.css
+++ b/css/perfil.css
@@ -28,6 +28,23 @@
     font-size: 16px;
 }
 
+.cartao-disciplina h4 {
+    margin-top: 4px;
+    margin-bottom: 2px;
+    margin-left: 2px;
+    font-size: 15px;
+    color: #222;
+}
+
+.cartao-disciplina h5 {
+    margin: auto;
+    color: #555;
+    text-align: left;
+    margin-left: 2px;
+    font-size: 12px;
+    font-weight: normal;
+}
+
 .cartao-disciplina p {
     margin: 6px 2px;
     display:inline-block;
@@ -63,6 +80,18 @@
 }
 
 .botao-comment {
-    width: 180px;
+    font-size: 12px;
+    width: 140px;
+    height: 24px;
+    line-height: 24px;
     display: inline-block;
+}
+
+.cancel-comment {
+    font-size: 12px;
+    font-weight: normal;
+    line-height: 20px;
+    width: 110px;
+    height: 20px;
+    float: right;
 }
