--- a/css/style.css
+++ b/css/style.css
@@ -133,21 +133,24 @@ body {
     background-color: inherit;
     top: 0;
     justify-items: center;
-    height: 40px;
+    height: 20px;
 }
 
 #username-div {
     text-align: center;
+    line-height: 1px;
 }
 
 #botao-logout {
     position: absolute;
     right: 0px;
     top: 0px;
+    bottom: 0px;
     margin: 0px;
     margin-right: 5px;
     width: 100px;
+    height: 20px;
+    line-height: 16px;
     font-weight: normal;
     text-decoration: none;
-    height: 100%;
 }
